[project]
name = "ai-agent-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "camelot-py>=0.10.1",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-deepseek>=0.1.4",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.7",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "pathlib>=1.0.1",
    "pdfplumber>=0.7.0",
    "pymupdf>=1.23.0",
    "pypdf2>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=0.19.0",
    "tabula-py>=2.5.0",
    "typing-extensions>=4.0.0",
]
